force-app/main/default/objects/custom_create388__c/custom_create388__c.object-meta.xml
<CustomObject>
    <label>Custom created object388</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects388</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>