force-app/main/default/objects/custom_create388__c/fields/custom_create_388field530__c.field-meta.xml
<CustomField>
    <fullName>custom_create_388field530__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 388field530</label>
    <type>Checkbox</type>
</CustomField>